[tool.poetry]
name = "simulation"
version = "0.1.0"
description = ""
authors = ["Kaziamov <kaziamov@outlook.com>"]
readme = "README.md"
packages = [
    {include = "simulation"}
]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
